<?xml version="1.0"?>
<package>
  <name>barrett_hand</name>
  <version>0.1.0</version>
  <description>The barrett_hand package contains all the components to control the Barrett Hand</description>


  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
 

  <author email="rnavarro@robotnik.es">Román Navarro</author>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_hand</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>bhand_description</run_depend>
  <run_depend>bhand_controller</run_depend>
  <run_depend>rqt_bhand</run_depend>

  <export><metapackage/></export>

</package>
