<?xml version="1.0"?>
<package>
  <name>barrett_hand</name>
  <version>0.1.1</version>
  <description>The barrett_hand package contains all the components to control the Barrett Hand</description>

  <maintainer email="rnavarro@robotnik.es">Rom치n Navarro</maintainer>
  <maintainer email="jarino@robotnik.es">Jorge Ari침o</maintainer>
  
  <author email="rnavarro@robotnik.es">Rom치n Navarro</author>
  <author email="jarino@robotnik.es">Jorge Ari침o</author>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_hand</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>bhand_controller</run_depend>
  <run_depend>rqt_bhand</run_depend>

  <export><metapackage/></export>

</package>
