<?xml version="1.0"?>
<package>
  <name>bhand_description</name>
  <version>0.1.0</version>
  <description>The bhand_description package. This package contains the meshes and urdf files of the hand</description>

  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bhand_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand/issues</url>

  <author email="rnavarro@robotnik.es">Roman Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
